rancher-bootstrap/cluster-template.yml
# default k8s version: v1.8.9-rancher1-1
# default network plugin: flannel
nodes:
  <NODES>

ingress:
    provider: none

addons: |-
  [...]
